# scheduled-webhook

./: .dockerignore  .env.example  Dockerfile  MakeFile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: Note.md  assignment.md  container-considerations.md  db-considerations.md  example.md  improvements.md  interview_prep.md  issues.md  project_structure.md  solution_design.md  solution_desing.md  webhook-scheduler.excalidraw
migrations/: env.py  script.py.mako
migrations/versions/: 001_create_timers_table.py  6216c08cd03a_create_timers_table.py  82940397e5e9_create_timers_table.py  c2c3ca3b7d42_add_dispatched_at_column.py  e82c6546a14b_create_timers_table.py
src/: main.py
src/core/: __init__.py  config.py  database.py  errors.py  logging.py  responses.py
src/core/configs/: __init__.py  app.py  base.py  database.py  redis.py  webhook.py
src/core/errors/: __init__.py  base.py  handlers.py  state.py  timer.py  webhook.py
src/enums/: __init__.py  error_code.py  timer_status.py
src/models/: __init__.py  base.py  state_mixin.py  timer.py
src/repository/: __init__.py  interfaces.py  timer.py
src/routers/: __init__.py  timers.py
src/schemas/: __init__.py  timer_create_request.py  timer_create_response.py  timer_get_response.py  timer_retrieve_response.py
src/services/: __init__.py  timer.py  webhook.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py  test_api.py  test_tasks.py
tests/data/: timer_scenarios.json
tests/integration/: conftest.py  test_api.py  test_tasks.py
tests/unit/: test_schemas.py  test_service.py  test_webhook_service.py
