[project]
name = "timer-service"
version = "1.0.0"
description = "Scheduled webhook execution service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "alembic>=1.14",
    "pytest>=9.0.2",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
