[project]
name = "timer-service"
version = "1.0.0"
description = "Scheduled webhook execution service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "alembic>=1.14",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.8",
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "celery-types>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Testing ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────

[tool.ruff]
line-length = 99
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # PEP8 errors
    "W",      # PEP8 warnings
    "F",      # Pyflakes
    "I",      # isort (import ordering)
    "N",      # PEP8 naming
    "UP",     # pyupgrade (modern syntax)
    "B",      # Bugbear (common pitfalls)
    "SIM",    # Simplification
    "C4",     # Comprehension style
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ── Dependency groups (uv) ───────────────────────────────────────────────────

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "celery-types>=0.26.0",
]
